add writer, specification

--- a/TeslaAPIHandler/TeslaAPIHandler.csproj
+++ b/TeslaAPIHandler/TeslaAPIHandler.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MQTTnet" Version="4.0.2.221" />
+    <PackageReference Include="MQTTnet.Extensions.ManagedClient" Version="4.0.2.221" />
+  </ItemGroup>
+
 </Project>
