Add VS Code configuration to debug in VS Code smoothly. not related to unity dev

--- a/TeslaAPIHandler/TeslaAPIHandler.csproj
+++ b/TeslaAPIHandler/TeslaAPIHandler.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="MQTTnet.Extensions.ManagedClient" Version="4.0.2.221" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Frontend/**" />
+    <EmbeddedResource Remove="Frontend/**" />
+    <None Remove="Frontend/**" />
+  </ItemGroup>
+
 </Project>
